# spreadsheet-mcp

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  Dockerfile.full  OPS_ARCHITECTURE_PLAN.md  README.md  glama.json  server.json
.cargo/: config.toml
.github/workflows/: ci.yml  docker.yml  publish-mcp-registry.yml  publish-npm-cli.yml  publish-npm-sdk.yml  release.yml
benchmarks/: README.md
benchmarks/scenario-01-roll-forward/: README.md  budget.json
crates/agent-spreadsheet/: Cargo.toml  README.md
crates/agent-spreadsheet/src/: main.rs
crates/spreadsheet-kit/: Cargo.toml  README.md
crates/spreadsheet-kit-wasm/: Cargo.toml  README.md
crates/spreadsheet-kit-wasm/src/: lib.rs
crates/spreadsheet-kit-wasm/tests/: session_lifecycle.rs
crates/spreadsheet-kit/src/: config.rs  errors.rs  lib.rs  model.rs  read.rs  response_prune.rs  session.rs  types.rs  verification.rs  workbook.rs  write.rs
crates/spreadsheet-kit/src/analysis/: formula.rs
crates/spreadsheet-kit/src/cli/: errors.rs  mod.rs  output.rs
crates/spreadsheet-kit/src/cli/commands/: diff.rs  mod.rs  read.rs  recalc.rs  session.rs  verify.rs  write.rs
crates/spreadsheet-kit/src/core/: binlog.rs  engine_bridge.rs  events.rs  mod.rs  read.rs  session.rs  session_store.rs  write.rs
crates/spreadsheet-kit/src/diff/: names.rs  sst.rs
crates/spreadsheet-kit/src/formula/: pattern.rs
crates/spreadsheet-kit/src/model/: diagnostics.rs  mod.rs
crates/spreadsheet-kit/src/recalc/: backend.rs  formualizer_backend.rs  macro_uri.rs  pooled.rs  screenshot.rs
crates/spreadsheet-kit/src/repository/: virtual_workspace.rs
crates/spreadsheet-kit/src/rules/: mod.rs
crates/spreadsheet-kit/src/runtime/: mod.rs
crates/spreadsheet-kit/src/tools/: fork.rs  mod.rs  param_enums.rs  rules_batch.rs  sheet_layout.rs  structure_impact.rs  vba.rs  write_normalize.rs
crates/spreadsheet-kit/tests/: cli_integration.rs  core_runtime_parity.rs  diff_engine.rs  diff_structure.rs  heuristic_scenarios.rs  new_tools.rs  output_defaults.rs  phase0_integration.rs  read_guardrails.rs  read_table_polish.rs  region_detection.rs  region_integration.rs  repository_readflow_parity.rs  scenario_benchmark_harness.rs  session_e2e.rs  sheet_overview_truncation.rs  surface_matrix_drift_check.rs  tools_integration.rs  unit_conditional_format_helpers.rs  unit_edit_batch.rs  unit_filters.rs  unit_formula_pattern.rs  unit_grid_roundtrip.rs  unit_layout_page.rs  unit_replace_in_formulas.rs  unit_repository_path.rs  unit_repository_virtual.rs  unit_security.rs  unit_utils.rs  unit_workbook.rs  unit_workbook_style_summary.rs  workbook_summary.rs
crates/spreadsheet-kit/tests/support/: builders.rs  mod.rs
crates/spreadsheet-mcp/: Cargo.toml  README.md
crates/spreadsheet-mcp/src/: analysis.rs  caps.rs  cli.rs  config.rs  diff.rs  errors.rs  fork.rs  formula.rs  lib.rs  main.rs  model.rs  recalc.rs  repository.rs  response_prune.rs  rules.rs  runtime.rs  security.rs  server.rs  state.rs  styles.rs  tools.rs  utils.rs  workbook.rs
crates/spreadsheet-mcp/src/analysis/: formula.rs
crates/spreadsheet-mcp/src/cli/: errors.rs  mod.rs
crates/spreadsheet-mcp/src/cli/commands/: mod.rs  read.rs  recalc.rs
crates/spreadsheet-mcp/src/core/: mod.rs  read.rs  recalc.rs  types.rs  write.rs
crates/spreadsheet-mcp/src/diff/: hash.rs
crates/spreadsheet-mcp/src/recalc/: formualizer_backend.rs
crates/spreadsheet-mcp/src/repository/: path_workspace.rs
crates/spreadsheet-mcp/src/runtime/: session.rs
crates/spreadsheet-mcp/src/tools/: fork.rs  mod.rs  param_enums.rs
crates/spreadsheet-mcp/tests/: cli_integration.rs  fork_workflow.rs  read_guardrails_mcp.rs  read_table_polish.rs  recalc_docker.rs  region_integration.rs  screenshot_docker.rs  server_smoke.rs  sheet_overview_truncation.rs  unit_column_size_batch.rs  unit_conditional_format_helpers.rs  unit_formualizer_backend.rs  unit_recalc_needed.rs  unit_replace_in_formulas.rs  unit_repository_virtual.rs  unit_rules_batch_cf.rs  unit_rules_batch_dv.rs  unit_sheet_layout_batch.rs  unit_structure_batch.rs  unit_style_batch.rs  unit_transform_batch.rs  unit_vba.rs  unit_workbook_style_summary.rs
crates/spreadsheet-mcp/tests/docker/: styles.rs  workbook_styles.rs
crates/spreadsheet-mcp/tests/support/: builders.rs  docker.rs  mcp.rs
docker/: entrypoint.sh  image.hash
docker/libreoffice/: Module1.xba  registrymodifications.xcu
docs/: ERGONOMICS.md  HEURISTICS.md  PACKAGING.md  PARITY-HARNESS.md  RECALC.md  REGISTRY-METADATA.md  tool-output-verbosity-implementation-plan.md  tool-output-verbosity-proposal.md
docs/architecture/: surface-boundary-rules.md  surface-capability-matrix.md
npm/agent-spreadsheet/: README.md  package.json
npm/spreadsheet-kit-sdk/: README.md  package.json
scripts/: check_surface_matrix_drift.py  hash-docker-context.sh  local-docker-mcp.sh  parity-harness.js  validate_registry_metadata.py
skills/: CLI_BATCH_WRITE_SKILL.md  EXPLORE_SKILL.md  SAFE_EDITING_SKILL.md
src/: config.rs  fork.rs  lib.rs  model.rs  security.rs  server.rs  state.rs  styles.rs  utils.rs  workbook.rs
src/analysis/: formula.rs  stats.rs
src/cli/: errors.rs  mod.rs  output.rs
src/core/: diff.rs  (+1 more)
tests/: cli_integration.rs  core_runtime_parity.rs  diff_engine.rs  diff_structure.rs  docker_tests.rs  fork_workflow.rs  heuristic_scenarios.rs  new_tools.rs  output_defaults.rs  read_table_polish.rs  recalc_docker.rs  region_detection.rs  region_integration.rs  repository_readflow_parity.rs  screenshot_docker.rs  server_smoke.rs  tools_integration.rs  unit_apply_formula_pattern.rs  unit_column_size_batch.rs  unit_config.rs  unit_edit_batch.rs  unit_formualizer_backend.rs  unit_formula_pattern.rs  unit_recalc_needed.rs  unit_repository_path.rs  unit_rules_batch_cf.rs  unit_rules_batch_dv.rs  unit_security.rs  unit_sheet_layout_batch.rs  unit_staging.rs  unit_structure_batch.rs  unit_style_batch.rs  unit_styles.rs  unit_transform_batch.rs  unit_workbook.rs  unit_workbook_style_summary.rs  unit_workbook_style_summary_recalc.rs  workbook_summary.rs
tickets/: README.md  TEMPLATE.md
(+84 files in other folders)
