[package]
name = "agent-spreadsheet"
version = "0.1.0"
edition = "2024"
description = "CLI spreadsheet automation surface for AI agents"
authors = ["Frankie Colson"]
repository = "https://github.com/PSU3D0/spreadsheet-mcp"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt"] }
spreadsheet-mcp = { version = "0.9.0", path = "../spreadsheet-mcp" }
