[package]
name = "agent-spreadsheet"
version = "0.1.0"
edition = "2024"
description = "Stateless spreadsheet CLI for AI agents — read, profile, edit, and diff .xlsx workbooks from the command line"
authors = ["Frankie Colson"]
repository = "https://github.com/PSU3D0/spreadsheet-mcp"
homepage = "https://github.com/PSU3D0/spreadsheet-mcp"
license = "Apache-2.0"
readme = "README.md"
keywords = ["spreadsheet", "cli", "agent", "xlsx", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt"] }
spreadsheet-mcp = { version = "0.9.0", path = "../spreadsheet-mcp" }
