[package]
name = "spreadsheet-kit-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM-facing byte/session API wrapper for spreadsheet-kit"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spreadsheet-kit = { path = "../spreadsheet-kit" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
umya-spreadsheet = "2.3.3"
