[package]
name = "spreadsheet-kit"
version = "0.1.0"
edition = "2024"
description = "Core spreadsheet automation primitives for agent-spreadsheet surfaces"
authors = ["Frankie Colson"]
repository = "https://github.com/PSU3D0/spreadsheet-mcp"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
umya-spreadsheet = "2.3.3"
