[package]
name = "spreadsheet-mcp"
version = "0.10.0"
edition = "2024"
description = "Stateful MCP server for spreadsheet analysis and editing — token-efficient tools for LLM agents to read, profile, edit, and recalculate .xlsx workbooks"
authors = ["Frankie Colson"]
repository = "https://github.com/PSU3D0/spreadsheet-mcp"
homepage = "https://github.com/PSU3D0/spreadsheet-mcp"
license = "Apache-2.0"
readme = "README.md"
keywords = ["spreadsheet", "mcp", "llm", "agent", "xlsx"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "spreadsheet-mcp"
path = "src/main.rs"

[[bin]]
name = "spreadsheet-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
spreadsheet-kit = { version = "0.10.0", path = "../spreadsheet-kit" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8"
serde_yaml = "0.9"
rmcp = { version = "0.11.0", features = ["transport-io", "transport-streamable-http-server"] }
rmcp-macros = "0.11.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "net", "process"] }
parking_lot = "0.12"
lru = "0.12"
ahash = "0.8"
smallvec = "1.13"
umya-spreadsheet = "2.3.3"
ovba = "0.7.1"
formualizer-parse = { version = "1.0.0" }
formualizer-workbook = { version = "0.3", default-features = false, features = ["umya"], optional = true }
walkdir = "2.5"
globset = "0.4"
rand = "0.8"
sha2 = "0.10"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
indexmap = "2.2"
regex = "1.10"
strum = { version = "0.26", features = ["derive"] }
schemars = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
axum = { version = "0.8", default-features = false, features = ["macros", "tokio", "http1"] }
tokio-util = { version = "0.7", features = ["rt"] }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
base64 = { version = "0.22", optional = true }

async-trait = { version = "0.1", optional = true }
uuid = { version = "1.10", features = ["v4"], optional = true }
zip = "0.6"
quick-xml = { version = "0.31", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"], optional = true }
tempfile = "3.10"

[features]
default = ["recalc-formualizer"]
recalc = ["async-trait", "uuid", "quick-xml", "xxhash-rust", "image", "base64"]
recalc-formualizer = ["recalc", "dep:formualizer-workbook"]
recalc-libreoffice = ["recalc"]
docker-tests = []

[dev-dependencies]
assert_matches = "1.5"
assert_cmd = "2.0"
serde_json = "1.0"
testcontainers = "0.23"
bollard = "0.18"
reqwest = { version = "0.12", features = ["json"] }
serial_test = "3.2"
rmcp = { version = "0.11.0", features = ["client", "transport-child-process"] }
